bk_ida/gccida/c3/mark_reg_live_nc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_reg_live_nc/src/global.c:2052:36: error: must use 'enum' tag to refer to type 'machine_mode'
void  mark_reg_live_nc( int regno, machine_mode mode) 
                                   ^
                                   enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_reg_live_nc/src/global.c:2108:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_reg_live_nc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_reg_live_nc/src/global.c:2109:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v12 = mode_class_0[mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_reg_live_nc/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/mark_reg_live_nc/src/obj/global.o] Error 1
